# e-commerce

.github/workflows/: python-app.yml
back_end/: .env  .gitignore  Dockerfile  auth_google.py  auth_token.py  banco_dados.py  body_models.py  docker-compose.yml  e-commerce.py  e-commercer-example.db  e-commercer.db  main.py  pyproject.toml  redis_config.py  script.ps1
back_end/celery_app/: celery_app.py
back_end/celery_app/tasks/: envia_email.py  enviar_email_para_excluir_conta.py
back_end/kafka_configs/: consumer.py  producer.py  worker.py
back_end/kafka_configs/tasks/: envia_email.py  enviar_email_para_excluir_conta.py
back_end/kubernetes/: celery-worker.yaml  deployment.yaml  kafka.yaml  redis.yaml  service.yaml  zookeeper.yaml
back_end/routers/: carrinho.py  cartoes.py  compra.py  compra_via_boleto.py  compra_via_cartao.py  dependencias.py  endereco.py  produtos.py  usuarios.py
back_end/tests/: test_envio_email.py  test_envio_email_corfimacao_excluir_conta.py
front_end/: index.html  reset-password.html  script.js  style.css
