[project]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Cauan Penha",email = "cauanppenha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "authlib[starlette] (>=1.6.9,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "asyncio (>=4.0.0,<5.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (==3.2.2)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "stripe (>=15.2.0,<16.0.0)",
]

[tool.poetry]
packages = [{include = "e_commerce", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
[dependency-groups]
dev = [
    "pytest-mock (>=3.15.1,<4.0.0)"
]
